# roomtemp-server

./: .gitignore  CMakeLists.txt  README.org  rtserver.c
src/: main.c  rts_sensor.c  rts_sensor.h
